Edit style.css to arrange the navbar, header topsec

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Admin Dashboard</title>
 </head>
 <body>
@@ -57,7 +60,24 @@
             </div>
         </div>
         <div id="header">
-            Head
+            <div id="top">
+                <div id="search-icon">
+                    <img src="./images/search.svg" alt="search">
+                </div>
+                <div id="search-bar">
+                    <input type="search" id="search">
+                </div>
+                <div id="notif-icon">
+                    <img src="./images/notif.svg" alt="notifications">
+                </div>
+                <div id="proid">
+                    <img src="./images/cat.svg" alt="profile">
+                </div>
+                <p id="name">Simple Panigrahi</p>
+            </div>
+            <div id="bot">
+                Bot
+            </div>
         </div>
         <div id="main">
             Main
