Edit style.css to arrange the bottom sec of header

--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
                 <p id="name">Simple Panigrahi</p>
             </div>
             <div id="bot">
-                Bot
+                <div id="proid-l">
+                    <img src="./images/cat.svg" alt="profile">
+                </div>
+                <div id="details">
+                    <p>Hi there,</p>
+                    <p>Simple Panigrahi(@elpmis)</p>
+                </div>
+                <div class="bot-btn new"><p>New</p></div>
+                <div class="bot-btn upload"><p>Upload</p></div>
+                <div class="bot-btn share"><p>Share</p></div>
             </div>
         </div>
         <div id="main">
