--- a/index.html
+++ b/index.html
@@ -89,7 +89,35 @@
             </div>
         </div>
         <div id="main">
-            Main
+            <div id="projects">
+                <p>My Projects</p>
+                <div id="proj-tab">
+                    <div class="proj">1</div>
+                    <div class="proj">2</div>
+                    <div class="proj">3</div>
+                    <div class="proj">4</div>
+                    <div class="proj">5</div>
+                    <div class="proj">6</div>
+                </div>
+            </div>
+            <div id="other">
+                <div id="announcements">
+                    Announcements
+                    <div id="an-tab">
+                        <div>1</div>
+                        <div>2</div>
+                        <div>3</div>
+                    </div>
+                </div>
+                <div id="trending">
+                    Trending
+                    <div id="td-tab">
+                        <div>1</div>
+                        <div>2</div>
+                        <div>3</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
