Edit index.html, style.css
Edit index.html to add template div for projects,
and template for announcements, trending, and
inline css.
Edit style.css to style the template div.

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                     <img src="./images/notif.svg" alt="notifications">
                 </div>
                 <div id="proid">
-                    <img src="./images/cat.svg" alt="profile">
+                    <img src="./images/cat.svg" alt="profile" style="width : 30px; height : 20px;">
                 </div>
                 <p id="name">Simple Panigrahi</p>
             </div>
             <div id="bot">
-                <div id="proid-l">
-                    <img src="./images/cat.svg" alt="profile">
+                <div id="proid-l" style="justify-self: center;">
+                    <img src="./images/cat.svg" alt="profile" style="width : 60px; height : 40px;">
                 </div>
                 <div id="details">
                     <p>Hi there,</p>
@@ -90,31 +90,204 @@
         </div>
         <div id="main">
             <div id="projects">
-                <p>My Projects</p>
+                <p style="font-weight: 700;">My Projects</p>
                 <div id="proj-tab">
-                    <div class="proj">1</div>
-                    <div class="proj">2</div>
-                    <div class="proj">3</div>
-                    <div class="proj">4</div>
-                    <div class="proj">5</div>
-                    <div class="proj">6</div>
+                    <div class="proj">
+                        <div style="background-color: orange;"></div>
+                        <div>
+                            <div>
+                                <p style="font-weight: 700; font-size: 16px;">
+                                    Super Cool Project
+                                </p>
+                                <p style="font-size: 12px;">
+                                    Sed tempus uc lacus sclerisque. 
+                                    Suspendisse solicitudin nibh erat, id 
+                                    facilisis felis accumsan nec.
+                                </p>
+                            </div>
+                            <div>
+                                <img src="./images/star.svg" alt="favorites">
+                                <img src="./images/eye-plus-outline.svg" alt="view">
+                                <img src="./images/fork.svg" alt="fork">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="proj">
+                        <div style="background-color: orange;"></div>
+                        <div>
+                            <div>
+                                <p style="font-weight: 700; font-size: 16px;">
+                                    Less Cool Project
+                                </p>
+                                <p style="font-size: 12px;">
+                                    Sed tempus uc lacus sclerisque. 
+                                    Suspendisse solicitudin nibh erat, id 
+                                    facilisis felis accumsan nec.
+                                </p>
+                            </div>
+                            <div>
+                                <img src="./images/star.svg" alt="favorites">
+                                <img src="./images/eye-plus-outline.svg" alt="view">
+                                <img src="./images/fork.svg" alt="fork">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="proj">
+                        <div style="background-color: orange;"></div>
+                        <div>
+                            <div>
+                                <p style="font-weight: 700; font-size: 16px;">
+                                    Impossible Project
+                                </p>
+                                <p style="font-size: 12px;">
+                                    Sed tempus uc lacus sclerisque. 
+                                    Suspendisse solicitudin nibh erat, id 
+                                    facilisis felis accumsan nec.
+                                </p>
+                            </div>
+                            <div>
+                                <img src="./images/star.svg" alt="favorites">
+                                <img src="./images/eye-plus-outline.svg" alt="view">
+                                <img src="./images/fork.svg" alt="fork">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="proj">
+                        <div style="background-color: orange;"></div>
+                        <div>
+                            <div>
+                                <p style="font-weight: 700; font-size: 16px;">
+                                    Easy Peasy App
+                                </p>
+                                <p style="font-size: 12px;">
+                                    Sed tempus uc lacus sclerisque. 
+                                    Suspendisse solicitudin nibh erat, id 
+                                    facilisis felis accumsan nec.
+                                </p>
+                            </div>
+                            <div>
+                                <img src="./images/star.svg" alt="favorites">
+                                <img src="./images/eye-plus-outline.svg" alt="view">
+                                <img src="./images/fork.svg" alt="fork">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="proj">
+                        <div style="background-color: orange;"></div>
+                        <div>
+                            <div>
+                                <p style="font-weight: 700; font-size: 16px;">
+                                    Ad Blocker
+                                </p>
+                                <p style="font-size: 12px;">
+                                    Sed tempus uc lacus sclerisque. 
+                                    Suspendisse solicitudin nibh erat, id 
+                                    facilisis felis accumsan nec.
+                                </p>
+                            </div>
+                            <div>
+                                <img src="./images/star.svg" alt="favorites">
+                                <img src="./images/eye-plus-outline.svg" alt="view">
+                                <img src="./images/fork.svg" alt="fork">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="proj">
+                        <div style="background-color: orange;"></div>
+                        <div>
+                            <div>
+                                <p style="font-weight: 700; font-size: 16px;">
+                                    Money Maker
+                                </p>
+                                <p style="font-size: 12px;">
+                                    Sed tempus uc lacus sclerisque. 
+                                    Suspendisse solicitudin nibh erat, id 
+                                    facilisis felis accumsan nec.
+                                </p>
+                            </div>
+                            <div>
+                                <img src="./images/star.svg" alt="favorites">
+                                <img src="./images/eye-plus-outline.svg" alt="view">
+                                <img src="./images/fork.svg" alt="fork">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="other">
                 <div id="announcements">
-                    Announcements
+                    <p style="font-weight: 700;">Announcements</p>
                     <div id="an-tab">
-                        <div>1</div>
-                        <div>2</div>
-                        <div>3</div>
+                        <div>
+                            <p>Site Maintenance</p>
+                            <p>
+                                Vestibulum condimentum tellus lacus,
+                                in accumsan elit maximus ac. Donec
+                                hendrerit sodales congue...
+                            </p>
+                            <hr>
+                        </div>
+                        <div>
+                            <p>
+                                Community Share Day
+                            </p>
+                            <p>
+                                Nan vel lectus tincidunt, rutrum nulla eu,
+                                ormare libero. Aliquam dictum accumsan portitor..
+                            </p>
+                            <hr>
+                        </div>
+                        <div>
+                            <p>
+                                Updated Privacy Policy
+                            </p>
+                            <p>
+                                Phasellus effcitur nisi eget elit consectur,
+                                eget condimentum ante auctor. Cras fringilla sagittis
+                                sem in mattis...
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div id="trending">
-                    Trending
+                    <p style="font-weight: 700;">Trending</p>
                     <div id="td-tab">
-                        <div>1</div>
-                        <div>2</div>
-                        <div>3</div>
+                        <div>
+                            <div>
+                                <img src="./images/cat.svg" alt="propic">
+                            </div>
+                            <div>
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img src="./images/cat.svg" alt="propic">
+                            </div>
+                            <div>
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img src="./images/cat.svg" alt="propic">
+                            </div>
+                            <div>
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div>
+                                <img src="./images/cat.svg" alt="propic">
+                            </div>
+                            <div>
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
